Backing out fixture changes

--- a/common/lib/xmodule/xmodule/js/fixtures/tabs-edit.html
+++ b/common/lib/xmodule/xmodule/js/fixtures/tabs-edit.html
@@ -41,10 +41,10 @@
             <div class="modal-actions">
                 <ul>
                     <li class="action-item">
-                        <button type="button" class="button action-primary action-save">Save</button>
+                        <a href="#" class="button action-primary action-save">Save</a>
                     </li>
                     <li class="action-item">
-                        <button type="button" class="button action-secondary action-cancel">Cancel</button>
+                        <a href="#" class="button action-secondary action-cancel">Cancel</a>
                     </li>
                 </ul>
             </div>
